--- a/02_hw_data_wrangling.Rmd
+++ b/02_hw_data_wrangling.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Problem Set 2: Data Wrangling"
-author: Your Name Here
+author: Grace Fragakis
 output: pdf_document
 ---
 
@@ -45,6 +45,18 @@ Use `dplyr` functions to create a table with the number of candidates in each ty
 
 ## Answer 1
 
+```{r}
+library(dplyr)
+
+fb_ads <- read.csv('data/fb_ads.csv')
+
+incumbency_table <-
+  fb_ads |>
+  count(incumbency)
+
+knitr::kable(incumbency_table, col.names = c("Incumbency Status", "Number of Candidates"))
+
+```
 
 
 \newpage
@@ -55,8 +67,17 @@ Filter the data to just US House and US Senate races and use this to create a ti
 
 Use `knitr::kable()` to produce a nicely formatted table. In this call, set the `digits` arguments to 3 and use the `col.names` argument to pass a nicer set of names. You can use the following as a template:
 
-```{r eval = FALSE}
-knitr::kable(my_table, col.names = c("Variable 1", "Variable 2", ...))
+```{r}
+
+party_incumbent_promote <- 
+  fb_ads |>
+  group_by(party, incumbency) |>
+  summarise(promote_prop = mean(ad_tone_promote, na.rm = TRUE))
+    
+  
+party_incumbent_promote
+
+knitr::kable(party_incumbent_promote, col.names = c("Party", "Incumbency Status", 'Promote Average'))
 ```
 
 In the writeup, describe which type of candidate sponsored the most promoting ads on average. 
@@ -65,6 +86,7 @@ In the writeup, describe which type of candidate sponsored the most promoting ad
 
 ## Answer 2
 
+The candidate that sponsered the the most promoting ads on average was the Democratic Incumbent. 
 
 
 \newpage
@@ -75,6 +97,25 @@ In the writeup, describe which type of candidate sponsored the most promoting ad
 Create a new variable called `impressions_millions` that is the total Facebook ad impressions in millions (as opposed to single impressions). Make sure to save the resulting dataset back as `fb_ads`.
 
 Create a histogram of this variable for just the US House races. Save the ggplot output as `plot_q3` and also print it to produce a plot in the output. In the text, describe the shape of the histogram and tell the reader if most of the House candidates had more than 10 million ads impressions on Facebook. 
+
+```{r}
+library(ggplot2)
+
+fb_ads$impressions_millions <- fb_ads$impressions / 1000000
+  
+house_filter <- 
+  fb_ads |>
+  filter(office == 'US House')
+
+plot_q3 <-
+  ggplot(house_filter, aes(x=impressions_millions)) + 
+  geom_histogram()
+
+plot_q3
+
+```
+
+```
 
  **Rubric:** 2pt for creating the new variable (autograder); 3pts for creating the histogram object (autograder); 2pts for answering the question about the histogram (PDF)
 
@@ -103,6 +144,26 @@ You do not need to exactly match the labels, but you should have informative lab
 
 ## Answer 4
 
+```{r}
+
+t_15_candidates <-
+  house_filter |>
+  arrange(desc(impressions_millions)) |>
+  head(n = 15) |>
+  mutate(cand_name_last = factor(cand_name_last, levels = rev(cand_name_last)))
+  
+fb_top_plot <-
+  ggplot(t_15_candidates, aes(x=impressions_millions, y = cand_name_last, fill = party)) + 
+  geom_bar(stat = 'identity') +
+  scale_fill_manual(values = c(R = "red", D = "blue")) +
+  labs(x = "Facebook Ad Impressions (Millions)", 
+       y = "Candidates (Last Name)",
+       title= "Top 15 US House Candidates by Facebook Ad Impressions")
+  
+fb_top_plot
+
+
+```
 
 
 \newpage
