--- a/02_hw_data_wrangling.Rmd
+++ b/02_hw_data_wrangling.Rmd
@@ -47,8 +47,9 @@ Use `dplyr` functions to create a table with the number of candidates in each ty
 
 ```{r}
 library(dplyr)
+library(tidyverse)
 
-fb_ads <- read.csv('data/fb_ads.csv')
+fb_ads <- read_csv('data/fb_ads.csv')
 
 incumbency_table <-
   fb_ads |>
